<resources>
    <string name="app_name">Trombi_Marseilles</string>
    <string name="nom">Nom:</string>
    <string name="textview">TextView</string>
    <string name="pr_nom">Prénom:</string>
    <string name="textview2">TextView</string>
    <string name="photo_du_user">Photo du user</string>
    <string name="trombinoscope">Trombinoscope</string>
    <string name="back">Back</string>

    <string name="remove_3_profiles">Supprimer 3 Profils</string>
    <string name="load_more_profile">Charger plus de Profils</string>
    <string name="pr_nom2">Prénom :</string>
    <string name="nat">Nationalité :</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="email">Email</string>
    <string name="n_e_le">Né(e) le :</string>
    <string name="cell">Cell</string>
    <string name="adresse">Adresse :</string>
    <string name="contact">Contact :</string>
    <string name="adresse2">adresse</string>
    <string name="num_ro">Numéro</string>
    <string name="etait">State</string>
    <string name="pays">Pays</string>
    <string name="code_postal">Code Postal</string>
    <string name="ville">Ville</string>
    <string name="username">Username</string>
    <string name="mdp">Mdp</string>
    <string name="nationalit">Nationalité</string>
    <string name="identifiant">Identifiant :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="age6">Age :</string>
    <string name="coordonn_es">Coordonnées :</string>
    <string name="lat">Lat. :</string>
    <string name="longe">Long. :</string>
    <string name="fus_hor">Fus. hor. :</string>
    <string name="informations_compl_mentaires">Informations Complémentaires</string>
    <string name="retour_en_arri_re">Retour en arrière</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="titre">Titre :</string>
    <string name="last_name">Last Name</string>
    <string name="nom2">Nom :</string>
</resources>