<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#A376CB"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbackground">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="86dp"
            android:layout_height="123dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />
        <View
            android:id="@+id/viewBar"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPhoto"
            app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
            app:layout_constraintTop_toTopOf="@id/imageViewPhoto" />
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"

            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/titre"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhoto"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle"
            tools:ignore="MissingConstraints,NotSibling" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:ignore="MissingConstraints,NotSibling" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/nom2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhoto"
            app:layout_constraintTop_toBottomOf="@+id/textViewFirstName"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/pr_nom2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhoto"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="MissingConstraints,NotSibling" />



    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/roundedbackground">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nat"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/textViewDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date_de_naissance"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/naissance"
            app:layout_constraintTop_toTopOf="@+id/naissance" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="301dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/contact"
            app:layout_constraintTop_toTopOf="@+id/contact" />

        <TextView
            android:id="@+id/textViewCell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cell"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textViewEmail"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <TextView
            android:id="@+id/naissance"
            android:layout_width="76dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:text="@string/n_e_le"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/adresse"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/habitat"
            app:layout_constraintTop_toBottomOf="@+id/textViewState" />

        <TextView
            android:id="@+id/textViewStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/adresse2"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textViewNumber"
            app:layout_constraintTop_toTopOf="@+id/textViewNumber" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/num_ro"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/habitat"
            app:layout_constraintTop_toTopOf="@+id/habitat" />

        <TextView
            android:id="@+id/textViewState"
            android:layout_width="59dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:text="@string/etait"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textViewNumber"
            app:layout_constraintTop_toBottomOf="@+id/textViewPostcode" />

        <TextView
            android:id="@+id/textViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pays"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textViewState"
            app:layout_constraintTop_toTopOf="@+id/textViewState" />

        <TextView
            android:id="@+id/textViewPostcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/code_postal"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textViewCity"
            app:layout_constraintTop_toTopOf="@+id/textViewCity" />

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ville"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textViewNumber"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/Identifiant"
            app:layout_constraintTop_toTopOf="@+id/Identifiant" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mdp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <TextView
            android:id="@+id/textViewNationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nationalit"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/Identifiant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/identifiant"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/textViewCell" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mot_de_passe"
            android:textStyle="bold"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="@+id/Identifiant"
            app:layout_constraintTop_toBottomOf="@+id/Identifiant" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toTopOf="@+id/age" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/age6"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/naissance"
            app:layout_constraintTop_toBottomOf="@+id/naissance" />

        <TextView
            android:id="@+id/coord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/coordonn_es"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/lat"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/coord"
            app:layout_constraintTop_toTopOf="@+id/coord" />

        <TextView
            android:id="@+id/long."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/longe"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/lat"
            app:layout_constraintTop_toBottomOf="@+id/lat" />

        <TextView
            android:id="@+id/fus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fus_hor"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/coord"
            app:layout_constraintTop_toBottomOf="@+id/long." />

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/lat"
            app:layout_constraintTop_toTopOf="@+id/lat" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/long."
            app:layout_constraintTop_toTopOf="@+id/long." />

        <TextView
            android:id="@+id/textViewOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fus"
            app:layout_constraintTop_toTopOf="@+id/fus" />


        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="281dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/fus"
            app:layout_constraintTop_toBottomOf="@+id/textViewOffset" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="323dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:text="@string/informations_compl_mentaires"
            android:textSize="22.5sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />



    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:padding="8dp"
        android:text="@string/retour_en_arri_re"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>