<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/drawable_titlebackground"
    android:padding="8dp"
    android:layout_margin="10dp">

    <View
        android:id="@+id/view"
        android:layout_width="448dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="97dp"
        android:layout_marginStart="2dp"

        android:contentDescription="@string/photo_du_user"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textview2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/prenom"
        app:layout_constraintStart_toEndOf="@+id/prenom"
        app:layout_constraintTop_toTopOf="@+id/prenom"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintStart_toEndOf="@+id/nom" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/nom"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/last"
        app:layout_constraintStart_toStartOf="@+id/prenom" />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/pr_nom"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nom"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>
