<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/trombi"
        android:layout_width="409dp"
        android:layout_height="67dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/drawable_titlebackground2"
        android:padding="16dp"
        android:text="@string/trombinoscope"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="413dp"
        android:layout_height="475dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="260dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trombi"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonLoadMore"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:background="@drawable/drawable_titlebackground2"
        android:cursorVisible="true"
        android:text="@string/load_more_profile"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list"
        app:layout_constraintVertical_bias="0.313"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonRemoveProfiles"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/drawable_titlebackground2"
        android:text="@string/remove_3_profiles"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:visibility="gone"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoadMore"
        app:layout_constraintStart_toStartOf="@+id/buttonLoadMore"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoadMore"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
